Ready for deployment: Fixed CORS, TypeScript errors, and Azure OpenAI integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,13 @@ spring.datasource.username=aloknarayansharma
 spring.datasource.password=Naruto#1701
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Enable SQL initialization
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 
 # Server configuration
 server.port=8080
@@ -15,3 +19,14 @@ server.error.include-binding-errors=always
 # Logging configuration
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Azure Bot Service Configuration
+azure.bot.id=${AZURE_BOT_ID}
+azure.bot.password=${AZURE_BOT_PASSWORD}
+azure.bot.service-url=https://webchat.botframework.com/
+azure.bot.channel-id=web
+
+# Azure OpenAI Configuration
+azure.openai.endpoint=https://your-resource-name.openai.azure.com
+azure.openai.key=your-api-key
+azure.openai.deployment-name=your-deployment-name
